# chipa-webhooks

./: .env  Cargo.toml  README.md
src/: dispatcher.rs  error.rs  hints.rs  lib.rs  matcher.rs  template.rs
src/platform/: discord.rs  generic.rs  mod.rs  ntfy.rs  slack.rs  telegram.rs
tests/: discord_integration.rs
