[package]
name = "chipa-webhooks"
version = "0.1.0"
edition = "2024"
description = "A Rust library for handling webhooks in the Chipa ecosystem."
license = "Apache-2.0"

[dependencies]
futures = "0.3.32"
handlebars = "6"
kanal = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time"
] }
tracing = "0.1"

[dev-dependencies]
dotenvy = "0.15"
